[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lbforaging"
version = "2.0.0"
description = "Level Based Foraging Environment"
readme = "README.md"
license = { text = "GPL-3.0+" }
authors = [
  { name = "Filippos Christianos" },
]
requires-python = ">=3.7"
dependencies = [
  "numpy",
  "gymnasium",
  "pyglet<2",
  "pettingzoo",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]
test = ["pytest"]
train = [
  "torch",
  "stable-baselines3",
  "supersuit",
  "tensorboard",
]

[project.urls]
Homepage = "https://github.com/semitable/lb-foraging"
Repository = "https://github.com/semitable/lb-foraging"

[tool.setuptools.packages.find]
where = ["."]

[tool.ty.src]
include = ["lbforaging"]


[tool.ruff]
line-length = 100
target-version = "py38"  # Bump to slightly newer, since 3.7 is really EOL
src = ["lbforaging", "tests"] 

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "C901",   # mccabe complexity
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # Line length handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
disallow_untyped_defs = false # Start lenient
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
